# phasta-buildsystem

./: CMakeLists.txt  README.md
phNSpre/: CMakeLists.txt
phNSpre/src-parallel/: CMakeLists.txt
phNSpre/src-serial/: CMakeLists.txt
phPost/: CMakeLists.txt
phPost/Reduce/src/: CMakeLists.txt
phShape/: CMakeLists.txt
phShape/src/: CMakeLists.txt
phSolver/incompressible/: CMakeLists.txt
